# miniEuler

./: README.md
lab1/src/: main.c
lab1/src/bsp/: CMakeLists.txt  prt_reset_vector.S  start.S
lab2/src/: CMakeLists.txt
lab2/src/bsp/: CMakeLists.txt  print.c  start.S
lab2/src/include/: prt_typedef.h
lab2_hw1/: makeMiniEuler.sh
lab2_hw1/src/: main.c
lab2_hw1/src/bsp/: print.c  prt_reset_vector.S
lab4/src/: main.c
lab4/src/bsp/: CMakeLists.txt  prt_exc.c  prt_vector.S  start.S
lab5/: runMiniEuler.sh
lab5/src/: CMakeLists.txt  main.c
lab5/src/bsp/: CMakeLists.txt  hwi_init.c  os_cpu_armv8_external.h  prt_exc.c  prt_vector.S  start.S
lab5/src/include/: os_cpu_armv8.h  prt_config.h
lab5/src/kernel/: CMakeLists.txt
lab6/src/: CMakeLists.txt  main.c
lab6/src/bsp/: os_cpu_armv8_external.h  prt_exc.c  prt_reset_vector.S  prt_vector.S
lab6/src/include/: prt_asm_cpu_external.h  prt_config.h  prt_errno.h  prt_module.h  prt_task.h  prt_task_external.h
lab6/src/kernel/: CMakeLists.txt
lab6/src/kernel/sched/: prt_sched_single.c
lab6/src/kernel/task/: prt_task.c  prt_task_init.c
lab6/src/kernel/tick/: CMakeLists.txt  prt_tick.c
lab9/src/: CMakeLists.txt  main.c
lab9/src/bsp/: CMakeLists.txt  hwi_init.c  mmu.c  mmu.h  os_cpu_armv8_external.h  os_exc_armv8.h  print.c  prt_exc.c  start.S  timer.c
lab9/src/include/: list_types.h  os_cpu_armv8.h  prt_amp_task_internal.h  prt_list_external.h  prt_sem.h  prt_sem_external.h  prt_shell.h  prt_task_external.h  prt_tick.h
lab9/src/kernel/: CMakeLists.txt
lab9/src/kernel/sched/: CMakeLists.txt
lab9/src/kernel/sem/: CMakeLists.txt  prt_sem.c  prt_sem_init.c
lab9/src/kernel/task/: CMakeLists.txt  prt_sys.c  prt_task.c
lab9/src/kernel/tick/: prt_tick.c
lab9/src/shell/: CMakeLists.txt  shmsg.c
